Added Swagger documentation
